--- a/client/components/like/index.wxml
+++ b/client/components/like/index.wxml
@@ -1,4 +1,4 @@
 <view class="container" bind:tap="onLike">
-  <image src="images/like.png" />
-  <text>20</text>
+  <image src="{{like?yesSrc:noSrc}}" />
+  <text>{{count}}</text>
 </view>
