--- a/client/components/like/index.wxss
+++ b/client/components/like/index.wxss
@@ -1,7 +1,8 @@
 .container {
   display: inline-flex;
   flex-direction: row;
-  padding: 10rpx
+  padding: 10rpx;
+  /* min-width: 90rpx; */
 }
 .container > image {
   width: 32rpx;
