--- a/client/pages/classic/classic.wxml
+++ b/client/pages/classic/classic.wxml
@@ -1,3 +1,11 @@
-<view class="chunk">
-  <c-like like="{{dataInfo.llike_status}}" count="{{dataInfo.fav_nums}}" />
+<view class="container">
+  <view class="header">
+    <c-epsoide class="epsoide" index="{{dataInfo.index}}" />
+    <c-like class="like"
+            bind:like="onLike" 
+            like="{{dataInfo.like_status}}" 
+            count="{{dataInfo.fav_nums}}" />
+  </view>
+  <c-movie img="{{dataInfo.image}}" 
+           content="{{dataInfo.content}}" />
 </view>
