--- a/client/components/classic/movie/index.wxml
+++ b/client/components/classic/movie/index.wxml
@@ -1,5 +1,2 @@
-<view class="classic-container">
-  <image src="{{img}}" class="classic-img" />
-  <image src="./images/movie@tag.png" class="tag" />
-  <text class="content">{{content}}</text>
-</view>
+<import src ="/templates/classic.wxml"/>
+<template is="classic" data="{{hidden, img, content, tag}}" />
