--- a/client/pages/classic/classic.wxss
+++ b/client/pages/classic/classic.wxss
@@ -16,7 +16,7 @@
   border-bottom: 1px solid #f5f5f5;
 }
 
-.episode {
+.epsoide {
   margin-left: 20rpx;
   margin-top: 4rpx;
 }
@@ -25,7 +25,7 @@
   margin-top: 6rpx;
 }
 
-.navi {
+.nav {
   position: absolute;
   bottom: 40rpx;
 }
