--- a/client/pages/book/book.wxml
+++ b/client/pages/book/book.wxml
@@ -1,13 +1,14 @@
-<!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+  <view class="header">
+    <view class="box">
+      <image src="/images/icon/search.png"/>
+      <text>搜索书籍</text>
+    </view>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="sub-container">
+    <image class="head-img" src="/images/book/quality.png"/>
+    <block wx:for="{{books}}" wx:key="id">
+      <c-book book="{{item}}"/>
+    </block>
   </view>
 </view>
