--- a/client/components/book/index.wxml
+++ b/client/components/book/index.wxml
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" bind:tap="onTap">
   <image src="{{book.image}}"/>
   <div class="description">
     <text class="title">{{book.title}}</text>
