--- a/client/pages/book/book.wxss
+++ b/client/pages/book/book.wxss
@@ -11,6 +11,7 @@
     align-items: center;
     background-color: #f5f5f5;
     margin-top: 100rpx;
+    width: 100%;
 }
 
 .box {
@@ -60,6 +61,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0 90rpx;
+    width: 100%;
+    overflow: hidden;
 }
 
 .books-container v-book{
