--- a/client/components/tag/index.wxml
+++ b/client/components/tag/index.wxml
@@ -1,6 +1,6 @@
-<view class="container">
+<view class="container tag-class">
   <text>{{text}}</text>
   <!-- <text>{{num}}</text> -->
   <slot name="after"></slot>
-  <!-- slot 插槽 -->
+  <!-- slot 杒槽 -->
 </view>
