--- a/client/pages/book-detail/book-detail.wxml
+++ b/client/pages/book-detail/book-detail.wxml
@@ -1,3 +1,4 @@
+<wxs src="../../utils/filter.wxs" module="utils"/>
 <view class="container">
   <view class="head">
     <image src="{{book.image}}"/>
@@ -7,11 +8,15 @@
   <view class="sub-container">
     <text class="headline">短评</text>
     <view class="comment-container">
-      <block wx:for="{{comments}}" wx:key="content">
-        <c-tag text="{{item.content}}">
+      <block wx:for="{{utils.limit(comments, 5)}}" wx:key="content">
+        <c-tag tag-class="{{index===0? 'ex-tag1' : '' || index===1 ? 'ex-tag2': ''}}" text="{{item.content}}">
           <text class="num" slot="after">{{'+' + item.nums}}</text>
         </c-tag>
       </block>
     </view>
+  </view>
+  <view class="sub-container">
+    <text class="headline">内容简介</text>
+    <text class="content">{{utils.format(book.summary)}}</text>
   </view>
 </view>
