--- a/client/pages/book-detail/book-detail.wxss
+++ b/client/pages/book-detail/book-detail.wxss
@@ -70,11 +70,11 @@
   color: #aaa;
 }
 
-/* .comment-container>v-tag:nth-child(1)>view {
+/* .comment-container>c-tag:nth-child(1)>view {
   background-color: #fffbdd;
 }
 
-.comment-container>v-tag:nth-child(2)>view {
+.comment-container>c-tag:nth-child(2)>view {
   background-color: #eefbff;
 } */
 .ex-tag1 {
