--- a/client/pages/book/book.wxml
+++ b/client/pages/book/book.wxml
@@ -7,8 +7,10 @@
   </view>
   <view class="sub-container">
     <image class="head-img" src="/images/book/quality.png"/>
-    <block wx:for="{{books}}" wx:key="id">
-      <c-book book="{{item}}"/>
-    </block>
+    <view class="books-container">
+      <block wx:for="{{books}}" wx:key="id">
+        <c-book book="{{item}}"/>
+      </block>
+    </view>
   </view>
 </view>
