--- a/client/components/tag/index.wxml
+++ b/client/components/tag/index.wxml
@@ -1,4 +1,4 @@
-<view class="container tag-class">
+<view bind:tap="onTap" class="container tag-class">
   <text>{{text}}</text>
   <!-- <text>{{num}}</text> -->
   <slot name="after"></slot>
