--- a/client/pages/book/book.wxss
+++ b/client/pages/book/book.wxss
@@ -11,7 +11,6 @@
     align-items: center;
     background-color: #f5f5f5;
     margin-top: 100rpx;
-    width: 100%;
 }
 
 .box {
@@ -61,10 +60,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0 90rpx;
-    width: 100%;
-    overflow: hidden;
 }
 
-.books-container v-book{
+.books-container c-book{
     margin-bottom: 10rpx;
 }
