--- a/client/pages/book/book.wxml
+++ b/client/pages/book/book.wxml
@@ -1,6 +1,6 @@
-<view class="container">
+<view class="container" wx:if="{{!searching}}">
   <view class="header">
-    <view class="box">
+    <view class="box" bind:tap="onSearch">
       <image src="/images/icon/search.png"/>
       <text>搜索书籍</text>
     </view>
@@ -14,3 +14,5 @@
     </view>
   </view>
 </view>
+
+<c-search wx:if="{{searching}}" bind:cancel="onCancel" />
