--- a/client/components/search/index.wxml
+++ b/client/components/search/index.wxml
@@ -2,12 +2,12 @@
     <view class="header">
         <view class="search-container">
             <image class="icon" src="images/search.png" />
-            <input value="{{q}}"  bind:confirm="onConfirm" placeholder-class='in-bar' placeholder='书籍名' class='bar' auto-focus="true" />
+            <input value="{{q}}"  bind:confirm="onConfirm" placeholder-class="in-bar" placeholder="书籍名" class="bar" auto-focus="true" />
             <image bind:tap="onDelete" class="cancel-img" src="images/cancel.png" />
         </view>
         <view bind:tap="onCancel" class="cancel">取消</view>
     </view>
-    <!-- <view wx:if="{{!searching}}">
+    <view wx:if="{{!searching}}">
         <view class="history">
             <view class="title">
                 <view class="chunk"></view>
@@ -31,7 +31,8 @@
             </view>
         </view>
     </view>
-
+    
+    <!-- 
     <view wx:if="{{searching}}" class="books-container">
         <block wx:for="{{dataArray}}" wx:key="{{item.id}}">
             <v-book showLike="{{false}}" book="{{item}}" class="book" />
