--- a/client/components/search/index.wxml
+++ b/client/components/search/index.wxml
@@ -37,8 +37,7 @@
             <c-book showLike="{{false}}" book="{{item}}" class="book" />
         </block>
     </view>
-    <!-- 
-    <v-loading class="loading-center" wx:if="{{loadingCenter}}"/>
-    <v-loading class="loading" wx:if="{{loading}}"/>
-    <text wx:if="{{noneResult}}" class="empty-tip">没有搜索到书籍</text> -->
+    <c-loading class="loading-center" wx:if="{{loadingCenter}}"/>
+    <c-loading class="loading" wx:if="{{loading}}"/>
+    <text wx:if="{{noneResult}}" class="empty-tip">没有搜索到书籍</text>
 </view>
