--- a/client/pages/book/book.wxml
+++ b/client/pages/book/book.wxml
@@ -15,4 +15,4 @@
   </view>
 </view>
 
-<c-search wx:if="{{searching}}" bind:cancel="onCancel" />
+<c-search more="{{more}}" wx:if="{{searching}}" bind:cancel="onCancel" />
