--- a/client/pages/my/my.wxml
+++ b/client/pages/my/my.wxml
@@ -1,13 +1,33 @@
-<!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+    <image src="/images/my/my@bg.png" class="bg"></image>
+    <!-- <open-data type="userAvatarUrl" class="avatar avatar-position"/> -->
+    <c-button wx:if="{{!authorized}}" open-type="getUserInfo" class="avatar-position" bind:getuserinfo="onGetUserInfo">
+        <image slot="img" class="avatar" src="/images/my/my.png" />
+    </c-button>
+    <!-- 登录 难点 服务器 微信支付 -->
+    <view wx:if="{{authorized}}" class="avatar-container avatar-position">
+        <image src="{{userInfo.avatarUrl}}" class="avatar" />
+        <text>{{userInfo.nickName}}</text>
+    </view>
+    <view class="about-container">
+        <view bind:tap="onJumpToAbout" class="about-us">
+            <image src="/images/my/about.png" />
+            <text class="description">关于我们</text>
+        </view>
+        <view class="about-us">
+            <text class="book-num">{{bookCount}}</text>
+            <text class="description">喜欢的书</text>
+        </view>
+    </view>
+
+    <view class="like-container">
+        <image class="headline" src="/images/my/like.png" />
+        <view class="preview-container">
+            <block wx:for="{{classics}}" wx:key="">
+                <c-preview bind:tapping="onJumpToDetail" class="preview" classic="{{item}}" />
+            </block>
+        </view>
+    </view>
+
 </view>
+<image bind:tap="onStudy" class="study" src="/images/my/study.png"></image>
